# pixel-NN

./: CMakeLists.txt
Root/: ClustersLoop.cxx  LinkDef.h  PixelNNUtils.cxx  TTrainedNetwork.cxx  ValidationHistograms.cxx  ValidationLoop.cxx
cmt/: Makefile.RootCore
pixel-NN/: ClustersLoop.h  PixelNNUtils.h  TTrainedNetwork.h  ValidationHistograms.h  ValidationLoop.h
pixel-NN-dataset/: ClustersLoop.h
python/: figures.py  validation.py
scripts/: AtlasStyle.py  ROC.py  Run-val.py  Run.py  balance_number.py  branches-list.py  check_numbers.py  compare-new-old.py  do_validation.py  draw_residuals_pulls.py  dump-csv.py  figures.py  hists.py  plot_clusters.py  shuffle_tree.py  submit.sh
util/: balanceNumber.cxx  pixelDatasetValidationHists-old.cxx  pixelDatasetValidationHists.cxx  resizePixelDataset.cxx  shuffle_tree.cxx  skip12m.cxx
